--- a/FoodRecommendationApp/app/src/main/res/layout/activity_diabetic.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/activity_diabetic.xml
@@ -80,6 +80,13 @@
                     android:textSize="12sp"/>
             </RadioGroup>
 
+            <Button
+                android:id="@+id/btnSubmit"
+                android:layout_marginTop="40dp"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="SUBMIT"/>
+
         </LinearLayout>
     </ScrollView>
 
