--- a/FoodRecommendationApp/app/src/main/res/layout/activity_diabetic.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/activity_diabetic.xml
@@ -4,90 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".DiabeticActivity">
 
-    <ScrollView
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:tabMode="scrollable"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-    <TextView
-        android:id="@+id/header"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:text="Allergic Reactions"
-        android:textAlignment="center"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"/>
 
-            <TextView
-                android:layout_width="379dp"
-                android:layout_height="wrap_content"
-                android:text="1. Are you protein intolerant? "
-                android:textSize="20dp" />
 
-            <RadioGroup
-                android:layout_marginTop="20dp"
-                android:id="@+id/radioGroup1"
-                android:layout_marginLeft="10dp"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
 
-            <RadioButton
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/proteinNo"
-                android:text="NO"
-                android:textSize="12sp"
-                 />
-            <RadioButton
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/proteinYes"
-                android:text="YES"
-                android:textSize="12sp"
-                 />
-            </RadioGroup>
-
-            <TextView
-                android:layout_width="379dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="20dp"
-                android:text="2. Are you carbohydrate intolerant? "/>
-
-            <RadioGroup
-                android:layout_marginTop="20dp"
-                android:id="@+id/radioGroup2"
-                android:layout_marginLeft="10dp"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/carbsNo"
-                    android:text="NO"
-                    android:textSize="12sp"/>
-                <RadioButton
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/carbsYes"
-                    android:text="YES"
-                    android:textSize="12sp"/>
-            </RadioGroup>
-
-            <Button
-                android:id="@+id/btnSubmit"
-                android:layout_marginTop="40dp"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:text="SUBMIT"/>
-
-        </LinearLayout>
-    </ScrollView>
 
 </LinearLayout>
