--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_th_carbohydrate.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_th_carbohydrate.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DbCarbohydrate">
+    tools:context=".ThCarbohydrate">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dbCarbohydrateRecycler"
+        android:id="@+id/thCarbohydrateRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
         tools:listitem="@layout/food_items"/>
 
-</RelativeLayout>
+</FrameLayout>
