--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_bp_vitamin.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_bp_vitamin.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DbCarbohydrate">
+    tools:context=".BpVitamin">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dbCarbohydrateRecycler"
+        android:id="@+id/bpVitaminRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
