--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_db_vitamin.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_db_vitamin.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".DbVitamin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:layout_centerInParent="true"
-        android:text="Third" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dbVitaminRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:itemCount="5"
+        tools:listitem="@layout/food_items"/>
 
 </RelativeLayout>
