--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_c26_vitamin.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_c26_vitamin.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThProtein">
+    tools:context=".C26Vitamin">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/thProteinRecycler"
+        android:id="@+id/c26VitaminRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
