--- a/FoodRecommendationApp/app/src/main/res/layout/fragment_c28_carbohydrate.xml
+++ b/FoodRecommendationApp/app/src/main/res/layout/fragment_c28_carbohydrate.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThProtein">
+    tools:context=".C28Carbohydrate">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/thProteinRecycler"
+        android:id="@+id/c28CarbohydrateRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="5"
